# tennisvibe

.github/workflows/: tennis-auto-editor-v2-packaging.yml
apps/tennis-auto-editor-v2/: .gitignore  ANDROID_PLAN.md  AUTOFLOW.md  EMBEDDED_PYTHON.md  PACKAGING.md  PROJECT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/tennis-auto-editor-v2/design-handoff/: README.md
apps/tennis-auto-editor-v2/runtime/: README.md
apps/tennis-auto-editor-v2/scripts/: build-standalone-macos.sh  build-standalone-ubuntu.sh  build-standalone-windows.sh  check-runtime-bundle.sh  prepare-embedded-python-linux.sh  prepare-embedded-python-macos.sh  prepare-embedded-python-windows.sh  prepare-python-vendor.sh  prepare-runtime.sh
apps/tennis-auto-editor-v2/src/: App.tsx  styles.css  types.ts
apps/tennis-auto-editor-v2/src-tauri/: Cargo.toml  tauri.conf.json
apps/tennis-auto-editor-v2/src-tauri/capabilities/: default.json
apps/tennis-auto-editor-v2/src-tauri/examples/: smoke_auto.rs
apps/tennis-auto-editor-v2/src-tauri/icons/: icon.icns
apps/tennis-auto-editor-v2/src-tauri/src/: lib.rs  main.rs
apps/tennis-auto-editor-v2/src-tauri/src/commands/: project.rs
apps/tennis-auto-editor-v2/src-tauri/src/models/: project.rs
apps/tennis-auto-editor-v2/src-tauri/src/services/: analyzer.rs  ffmpeg.rs  mod.rs  mpv.rs  probe.rs  workspace.rs
apps/tennis-auto-editor-v2/src/lib/: tauriApi.ts
apps/tennis-auto-editor/python/analyzer/: __init__.py  audio_features.py  io_utils.py  main.py  scoring.py  segment_logic.py  types.py  video_features.py  (+1 more)
